--- a/templates/inc/main_head.html
+++ b/templates/inc/main_head.html
@@ -2,8 +2,8 @@
 
 <head>
     <!-- Required meta tags -->
-    <base href="http://127.0.0.1:8000/">
-    <!-- <base href="http://fizma.pythonanywhere.com/"> -->
+    <!-- <base href="http://127.0.0.1:8000/"> -->
+    <base href="http://fizma.pythonanywhere.com/">
     
     <meta charset="utf-8" />
     <meta
